# train-control

./: .gitignore  CMakeLists.txt  GEMINI.md  PROTOCOL.md  README.md  sdkconfig.defaults
components/debug_log/: CMakeLists.txt  Kconfig  debug_log.c
components/debug_log/include/: debug_log.h
components/display/: CMakeLists.txt  Kconfig  display.c  font8x8.h
components/display/include/: display.h
components/event_bus/: event_bus.c
components/event_bus/include/: event_bus.h
components/input_manager/: CMakeLists.txt  Kconfig  button.c  button.h  encoder.c  encoder.h  input_manager.c
components/input_manager/include/: input_manager.h
components/mongoose/: CMakeLists.txt
components/mqtt_broker/: CMakeLists.txt  Kconfig  mqtt_broker.c
components/mqtt_broker/include/: mqtt_broker.h
components/train_controller/: CMakeLists.txt  train_controller.c
components/train_controller/include/: train_controller.h
components/wifi_ap/: CMakeLists.txt  Kconfig  wifi_ap.c
components/wifi_ap/include/: wifi_ap.h
main/: CMakeLists.txt  Kconfig.projbuild  main.c
